--- a/index.html
+++ b/index.html
@@ -4,6 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Password Generator By Using Javascript</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-lk...your-sha512-here..." crossorigin="anonymous" />
+      
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      
+      <div class="title">
+        <h1 id="white">
+          Generate a
+        </h1>
+        <h1 id="green"><u>Random Password</u></h1>
+      </div>
+
+      <div class="inputBox">
+        <button id="searchTab">
+        <input type="text" placeholder="Password"/>
+        <i class="fa-solid fa-clone"></i></button>
+      </div>
+
+      <div class="genbtn">
+        <button id="genTab">
+          <i class="fa-solid fa-bolt"></i>Generate Password</button>
+      </div>
+
+    </div>
+  </body>
 </html>
+
